Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21267

qmake doesn't correctly handle QMAKE_INFO_PLIST

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.2.0
    • 4.7.4
    • Build tools: qmake
    • None
    • MacOSX Snow Leopard
    • de5553aad52f8a8343d53bac5e9d29bcd67fbf2c,a959beeeeca33b69ae51f4a030510df3fe4f13a5,7be6438badf00f24b414c2d27d564e636e2b5eb5,

      When defining the QMAKE_INFO_PLIST var, qmake doesn't correctly handle it and doesn't provide the right rule in the Makefile.
      Attached is a Makefile, note the EMPTY rule about QMAKE_INFO_PLIST. Added a targz with a compilable project.

      For example:

      anaconda:qtbug HappyCactus$ cat qtbug.pro
      TEMPLATE=app
      QT+= gui

      QMAKE_INFO_PLIST=Info.plist

      SOURCES += main.cpp

      anaconda:qtbug HappyCactus$ cat Makefile

      #############################################################################
      # Makefile for building: qtbug.app/Contents/MacOS/qtbug
      # Generated by qmake (2.01a) (Qt 4.7.4) on: ven set 2 17:41:27 2011
      # Project:  qtbug.pro
      # Template: app
      # Command: /opt/QtSDK/Desktop/Qt/474/gcc/bin/qmake -spec /opt/QtSDK/Desktop/Qt/474/gcc/mkspecs/macx-g++ -o Makefile qtbug.pro
      #############################################################################
      
      ####### Compiler, tools and options
      
      CC            = gcc
      CXX           = g++
      
      [...]
      
      qtbug.app/Contents/PkgInfo: 
              @$(CHK_DIR_EXISTS) qtbug.app/Contents || $(MKDIR) qtbug.app/Contents 
              @$(DEL_FILE) qtbug.app/Contents/PkgInfo
              @echo "APPL????" >qtbug.app/Contents/PkgInfo
      qtbug.app/Contents/Resources/empty.lproj: 
              @$(CHK_DIR_EXISTS) qtbug.app/Contents/Resources || $(MKDIR) qtbug.app/Contents/Resources 
              @touch qtbug.app/Contents/Resources/empty.lproj
      
      : 
              @$(DEL_FILE) 
              @sed -e "s,@ICON@,,g" -e "s,@EXECUTABLE@,qtbug,g" -e "s,@TYPEINFO@,????,g" Info.plist >
      dist: 
              @$(CHK_DIR_EXISTS) .tmp/qtbug1.0.0 || $(MKDIR) .tmp/qtbug1.0.0 
              $(COPY_FILE) --parents $(SOURCES) $(DIST) .tmp/qtbug1.0.0/ && $(COPY_FILE) --parents main.cpp .tmp/qtbug1.0.0/ && (cd `dirname .tmp/qtbug1.0.0` && $(TAR) qtbug1.0.0.tar qtbug1.0.0 && $(COMPRESS) qtbug1.0.0.tar) && $(MOVE) `dirname .tmp/qtbug1.0.0`/qtbug1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/qtbug1.0.0
      
      

        1. helloqt_shadow.zip
          48 kB
          Paulo
        2. qtbug.tar.gz
          2 kB
          HappyCactus
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            happycactus HappyCactus
            Votes:
            1 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes